--- a/Master/Pre-Entrega Proyecto final/SistemaGestionUI.csproj
+++ b/Master/Pre-Entrega Proyecto final/SistemaGestionUI.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SistemaGestionBussiness\SistemaGestionBussiness.csproj" />
     <ProjectReference Include="..\SistemaGestionEntities\SistemaGestionEntities.csproj" />
   </ItemGroup>
